# rpgd

./: .anjuta_sym_db.db  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  hack  install-old  libtool  mail.sh  rpgwatch.sh
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
etc/: access  armor  callers  class  dungeon  magic  real estate  rpgd.conf  rpgd.service  rpgd.spec  security  weapon
help/: Alchemist  Assassin  Barbarian  Bard  Cleric  Fighter  God  Jester  Magician  Novice  Paladin  Ranger  Rogue  Sage  Thief  Titan
include/: all.h  btree.h  client.h  common.h  global.h  rpgd.h
init/: rpgd.conf
menu/: Main  Main.IBM
msg/: Logoff  Logoff.IBM  Logon  System  Tavern
snd/: casino.mid  combat1.mid  combat2.mid  combat3.mid  death.mid  dungeon1.mid  dungeon3.mid  joust.mid  logoff.mid  party.mid  reroll.mid  sailing.mid  tavern1.mid  tavern2.mid  tavern3.mid  victory.mid
src/: common.c
src/rpgclient/: arena.c  battle.c  casino.c  dungeon.c  editor.c  global.c  lists.c  logon.c  main.c  mainmenu.c  naval.c  newuser.c  party.c  square.c  sysop.c  tavern.c  term.c
src/rpgd/: btree.c  rpgd.c
src/rpgweb/: main.c
